--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -138,7 +138,6 @@ span.free-orders {
     height: 80px;
     margin: auto;
     max-width: 1200px;
-    position: relative;
     background-size: cover;
     background-position: 50% 0;
     transition: background-color .3s, opacity .3s;
@@ -147,11 +146,11 @@ span.free-orders {
     line-height: 80px;
     margin: 0px 0px 0px 0px;
 }
-#nav-title ul{
+#nav-title > ul{
     height: 80px;
     width: 100%;
 }
-#nav-title ul li {
+#nav-title > ul > li {
     float: left;
 }
 li#store, li#video, li#company{
